Closed Bug 1292475 Opened 9 years ago Closed 9 years ago

Nightly cannot receive gamepad event under windows platform

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox50 --- fixed
firefox51 --- fixed

People

(Reporter: cleu, Assigned: cleu)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Test Environment: Windows 10 and Nightly with stock PS4 controller via USB Symptom: When we go to http://html5gamepad.com with gamepad connected, the page does not receive any events. Patch is ongoing.
Attached patch Fix windows gamepad api backend (obsolete) — Splinter Review
Assignee: nobody → cleu
Attachment #8778138 - Flags: review?(kyle)
Comment on attachment 8778138 [details] [diff] [review] Fix windows gamepad api backend Review of attachment 8778138 [details] [diff] [review]: ----------------------------------------------------------------- Oh my. I wish we had automated tests that covered the platform backend implementations. :-(
Attachment #8778138 - Flags: review?(kyle) → review+
Keywords: checkin-needed
I wish we had this kind of test, too. :(
does not apply cleanly : patching file dom/gamepad/windows/WindowsGamepad.cpp Hunk #1 FAILED at 752 1 out of 1 hunks FAILED -- saving rejects to file dom/gamepad/windows/WindowsGamepad.cpp.rej patch failed, unable to continue (try -v) patch failed, rejects left in working directory errors during apply, please fix and qrefresh 0001-fix-windows-gamepad-api.patch
Flags: needinfo?(cleu)
Keywords: checkin-needed
I think the reason why the previous patch doesn't apply is because there is a redundant "-" which causes conflict. This patch should work.
Attachment #8778138 - Attachment is obsolete: true
Flags: needinfo?(cleu)
Attachment #8778563 - Flags: review+
Pushed by kmachulis@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/f9243f28dbe9 Fix Windows Gamepad API backend to receive event correctly; r=ted
Comment on attachment 8778563 [details] [diff] [review] Fix Windows Gamepad API backend to receive event correctly r=ted Approval Request Comment [Feature/regressing bug #]: Bug 1221730 [User impact if declined]: Any joystick not recognized by xinput won't work on windows [Describe test coverage new/current, TreeHerder]: Hand tested on windows machines. [Risks and why]: None [String/UUID change made/needed]: None
Attachment #8778563 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment on attachment 8778563 [details] [diff] [review] Fix Windows Gamepad API backend to receive event correctly r=ted Manually tested by dev, has stabilized on Nightly for a few days, Aurora50+
Attachment #8778563 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Hi Kyle, this seems like a regression to me. Is there a way to get some automated tests that can catch regressions like this in the future? Thanks!
Flags: needinfo?(kyle)
Yeah, we've started talking about platform specific tests for hardware APIs so things like this happen less. It's going to be a long road though.
Flags: needinfo?(kyle)
(In reply to Kyle Machulis [:kmachulis] [:qdot] from comment #11) > Yeah, we've started talking about platform specific tests for hardware APIs > so things like this happen less. It's going to be a long road though. Thanks! I am glad we are heading down that path.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: