Bug 1292475 - Fix Windows Gamepad API backend to receive event correctly; r=ted a=ritu CLOSED TREE

MozReview-Commit-ID: 6AVYu9uEBWQ